@@ -179,23 +179,6 @@ Slice::CsGenerator::typeToString(const TypePtr& type)
     return "???";
 }
 
-static string
-toArrayAlloc(const string& decl, const string& sz)
-{
-    int count = 0;
-    string::size_type pos = decl.size();
-    while(pos > 1 && decl.substr(pos - 2, 2) == "[]")
-    {
-        ++count;
-	pos -= 2;
-    }
-    assert(count > 0);
-
-    ostringstream o;
-    o << decl.substr(0, pos) << '[' << sz << ']' << decl.substr(pos + 2);
-    return o.str();
-}
-
 bool
 Slice::CsGenerator::isValueType(const TypePtr& type)
 {
@@ -618,7 +601,7 @@ Slice::CsGenerator::writeSequenceMarshalUnmarshalCode(Output& out,
 	    out << nl << param << " = new ";
 	    if(isArray)
 	    {
-	        out << toArrayAlloc(typeS + "[]", "sz");
+		out << toArrayAlloc(typeS + "[]", "sz");
 	    }
 	    else
 	    {
@@ -773,6 +756,23 @@ Slice::CsGenerator::writeSequenceMarshalUnmarshalCode(Output& out,
     }
 
     return;
+}
+
+string
+Slice::CsGenerator::toArrayAlloc(const string& decl, const string& sz)
+{
+    int count = 0;
+    string::size_type pos = decl.size();
+    while(pos > 1 && decl.substr(pos - 2, 2) == "[]")
+    {
+        ++count;
+	pos -= 2;
+    }
+    assert(count > 0);
+
+    ostringstream o;
+    o << decl.substr(0, pos) << '[' << sz << ']' << decl.substr(pos + 2);
+    return o.str();
 }
 
 void
